--- a/.github/workflows/publish-to-packages.yml
+++ b/.github/workflows/publish-to-packages.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Setup Gradle 🔧
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
+      - name: List files in the working directory 🗂️
+        run: ls -la
+
       - name: Publish package 🚀
         run: ./gradlew publish
         env:
