--- a/.github/workflows/publish-to-packages.yml
+++ b/.github/workflows/publish-to-packages.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Grant execute permission for Gradle wrapper script 🛠️
         run: chmod +x ./gradlew
 
+      - name: Print environment variables
+        run: printenv
+
       - name: Publish package 🚀
         run: ./gradlew publish
         env:
