--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = "https://maven.pkg.github.com/VitacraftOrg/ServerLibraries"
+            url = uri("https://maven.pkg.github.com/VitacraftOrg/ServerLibraries")
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
