--- a/.github/workflows/publish-to-packages.yml
+++ b/.github/workflows/publish-to-packages.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Setup Gradle 🔧
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
+      - name: Log environment variables (excluding sensitive info)
+        run: echo "OSSRH_USERNAME=${{ secrets.OSSRH_USERNAME }}\nOSSRH_TOKEN_LENGTH=${{ secrets.OSSRH_TOKEN | length }}"
+
       - name: Grant execute permission for Gradle wrapper script 🛠️
         run: chmod +x ./gradlew
 
