--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,6 +5,6 @@
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
 
 image:
-  file: .gitpod.Dockerfile
+  file: .gitpod/.Dockerfile
 
 
