Moved the modlist to a StaticRegistry and adapted the implementations.

--- a/run/server.properties
+++ b/run/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Sep 14 11:31:37 UTC 2024
+#Wed Nov 27 15:10:12 CET 2024
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
