Fixed mods retrieval to work on any filesystem, added the debug method on the msg class and added the config.yml

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,6 @@ repositories {
         url = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
         mavenContent { snapshotsOnly() }
     }
-    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -31,8 +30,8 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation(include("com.github.Carleslc.Simple-YAML:Simple-Yaml:1.8.4"))
-    shadow 'com.github.Carleslc.Simple-YAML:Simple-Yaml:1.8.4'
+    modImplementation(include("org.yaml:snakeyaml:2.0"))
+    shadow 'org.yaml:snakeyaml:2.0'
 
     modImplementation(include("net.kyori:adventure-api:4.18.0-SNAPSHOT"))
     modImplementation(include("net.kyori:adventure-text-minimessage:4.17.0"))
@@ -61,28 +60,5 @@ java {
 jar {
     from("LICENSE") {
         rename { "${it}_${project.archivesBaseName}"}
-    }
-}
-
-// configure the maven publication
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-            groupId = 'net.vitacraft' // Set your group ID
-            artifactId = 'serverlibraries' // Set your artifact ID in lowercase
-            version = '1.0-SNAPSHOT' // Set your version
-        }
-    }
-
-    repositories {
-        maven {
-            name = "OSSRH"
-            url = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-            credentials {
-                username = System.getenv("MAVEN_USERNAME")
-                password = System.getenv("MAVEN_PASSWORD")
-            }
-        }
     }
 }
